[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mods"
authors = [
    { name = "Giang Nguyen", email = "giang.nguyen@savba.sk" },
    { name = "Stefan Dlugolinsky", email = "stefan.dlugolinsky@savba.sk" },
]
description = "MODS - Intelligent module using ML/DL techniques for underlying IDS and monitoring system"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/mods"
"Bug Tracker" = "https://github.com/ai4os-hub/mods/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "MODS_DATA_PATH=tests/data",
    "MODS_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [ "mods" ]

[tool.setuptools.package-dir]
"mods" = "mods"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
mods = "mods.api"